Implemented Faker/Non-IO API
